@@ -1,5 +1,9 @@
 * Feb 6 2001 hship
 
+Add missing method getMaximumLengthBinding to TextField.
+
+* Feb 6 2001 hship
+
 Don't create new page recorder instances until actually needed.
 Actually invoke the ILifeCycle finishLoad() method.
 Allow informal parameters for the validating text field components (but apply them
